[package]
name = "rl-replay-renamer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
argh = "0.1.12"
boxcars = "0.9.11"
humantime = "2.1.0"
rayon = "1.8.1"
serde = "1"
serde_json = "1"
